Prior to storing each state